overflow of text in projectlist some what fixed

--- a/styles/Projects/ProjectDetails.module.css
+++ b/styles/Projects/ProjectDetails.module.css
@@ -27,7 +27,7 @@
 }
 
 .info {
-  margin-top: 5vh;
+  /* margin-top: 5vh; */
   grid-column: 2 / 5;
   grid-row: 1 / 2;
   background-image: linear-gradient(
@@ -37,11 +37,14 @@
   );
   clip-path: polygon(0 0, 100% 0, 100% 100%, 20% 100%);
   height: 64.75%;
+  height: auto;
   opacity: 0.8;
   color: white;
   display: flex;
   flex-direction: column;
   padding-left: 10vw;
-  align-content: center;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  align-content: flex-start;
   justify-content: center;
 }
